DatabaseServer, fxServer, python flaskapp
created python flask web service, that handles the cleaning, feature extraction etc.

fxServer interacts with flask server, and then sends to database server

Database server saves all the data
