# dataBaseServer/src/main/java/api/EyetrackerApi.java
@@ -32,19 +32,19 @@ public class EyetrackerApi  {
     }
 
 
-    @GET
-    @Path("/{userId}")
-    @ApiOperation(value = "Find values in database by userId", notes = "Create a query message to database to retrieve certain data",
-            response = String.class)
-    @ApiResponses(value = {@ApiResponse(code = 400, message = "invalid user id")})
-    public Response getDataFromDb(
-            @ApiParam(value = "Query string for userId for cassandra database", required = true) @PathParam("userId") String userId){
-        CassandraClient cassandraClient = new CassandraClient();
-        String resp = cassandraClient.getDataFromUserId(userId);
-        logger.info(resp);
-//        return eyetrackerApiService.response(userId);
-        return Response.ok().entity("query: " + resp).build();
-    }
+//    @GET
+//    @Path("/{userId}")
+//    @ApiOperation(value = "Find values in database by userId", notes = "Create a query message to database to retrieve certain data",
+//            response = String.class)
+//    @ApiResponses(value = {@ApiResponse(code = 400, message = "invalid user id")})
+//    public Response getDataFromDb(
+//            @ApiParam(value = "Query string for userId for cassandra database", required = true) @PathParam("userId") String userId){
+//        CassandraClient cassandraClient = new CassandraClient();
+//        String resp = cassandraClient.getDataFromUserId(userId);
+//        logger.info(resp);
+////        return eyetrackerApiService.response(userId);
+//        return Response.ok().entity("query: " + resp).build();
+//    }
 
 //    @GET
 //    @Path("/getData")
