# dataBaseServer/src/main/webapp/swaggerUI/swagger.json
@@ -35,31 +35,6 @@
         }
       }
     },
-    "/eyetrackerRaw/{userId}" : {
-      "get" : {
-        "summary" : "Find values in database by userId",
-        "description" : "Create a query message to database to retrieve certain data",
-        "operationId" : "getDataFromDb",
-        "parameters" : [ {
-          "name" : "userId",
-          "in" : "path",
-          "description" : "Query string for userId for cassandra database",
-          "required" : true,
-          "type" : "string"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "successful operation",
-            "schema" : {
-              "type" : "string"
-            }
-          },
-          "400" : {
-            "description" : "invalid user id"
-          }
-        }
-      }
-    },
     "/shimmerRaw" : {
       "post" : {
         "summary" : "Transfer ShimmerMessage data",
@@ -91,13 +66,16 @@
     "EyeTrackerMessage" : {
       "type" : "object",
       "properties" : {
-        "userId" : {
+        "id" : {
           "type" : "string"
         },
         "features" : {
           "type" : "string"
         },
         "data" : {
+          "type" : "string"
+        },
+        "type" : {
           "type" : "string"
         }
       }
@@ -105,13 +83,16 @@
     "ShimmerMessage" : {
       "type" : "object",
       "properties" : {
-        "userId" : {
+        "id" : {
           "type" : "string"
         },
         "features" : {
           "type" : "string"
         },
         "data" : {
+          "type" : "string"
+        },
+        "type" : {
           "type" : "string"
         }
       }
